environments/dev/apps/catalog-bff-kustomization/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: catalog-bff
  namespace: catalog
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: catalog-bff
          resources:
            requests:
              memory: "128Mi"
              cpu: "50m"
            limits:
              memory: "256Mi"
              cpu: "200m"
